@@ -13,13 +13,13 @@
   <name>Spring Core v06 :: Fulls Journey</name>
 
   <properties>
-    <lombok.version>1.18.28</lombok.version>
-    <java-core.version>17</java-core.version>
-    <spring-core.version>6.0.11</spring-core.version>
-    <mockito.version>5.3.1</mockito.version>
-    <junit-jupiter.version>5.9.3</junit-jupiter.version>
-    <maven-compiler.version>3.11.0</maven-compiler.version>
-    <maven-surefire.version>3.1.2</maven-surefire.version>
+    <lombok.version>1.18.32</lombok.version>
+    <java-core.version>21</java-core.version>
+    <spring-core.version>6.1.6</spring-core.version>
+    <mockito.version>5.11.0</mockito.version>
+    <junit-jupiter.version>5.10.2</junit-jupiter.version>
+    <maven-compiler.version>3.13.0</maven-compiler.version>
+    <maven-surefire.version>3.2.5</maven-surefire.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -61,27 +61,31 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-expression</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+    </dependency>
     <!-- Jakarta -->
     <dependency>
       <groupId>jakarta.annotation</groupId>
       <artifactId>jakarta.annotation-api</artifactId>
-      <version>2.1.1</version>
+      <version>3.0.0-M1</version>
     </dependency>
     <!-- Logger -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>2.0.6</version>
+      <version>2.0.12</version>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-core</artifactId>
-      <version>1.4.5</version>
+      <version>1.5.6</version>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.4.5</version>
+      <version>1.5.6</version>
     </dependency>
     <!-- Misc -->
     <dependency>
@@ -147,6 +151,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire.version}</version>
           <configuration>
+            <argLine>-XX:+EnableDynamicAgentLoading</argLine>
             <includes>
               <include>**/*Tests.java</include>
               <include>**/*Test.java</include>
@@ -156,6 +161,31 @@
             </excludes>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>3.2.5</version>
+          <executions>
+            <execution>
+              <id>integration-test</id>
+              <goals>
+                <goal>integration-test</goal>
+                <goal>verify</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>verify</id>
+              <goals>
+                <goal>verify</goal>
+              </goals>
+            </execution>
+          </executions>
+          <configuration>
+            <includes>
+              <include>**/*IT</include>
+            </includes>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
@@ -163,4 +193,11 @@
     <module>procore</module>
     <module>recipes</module>
   </modules>
+  <repositories>
+    <repository>
+      <id>maven_central</id>
+      <name>Maven Central</name>
+      <url>https://repo.maven.apache.org/maven2/</url>
+    </repository>
+  </repositories>
 </project>
